--- a/Mina_arbete.html
+++ b/Mina_arbete.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <h1>Mina arbeten</h1>
 <p>På denna sidan har jag samlat några av mina tidigare arbeten inom webbutvecklingen. Här hittar du bland annat min receptsida och portfolio.</p>
 <img width= "300" src="case.jpg" alt="case.jpg">
 
 <ol>
-    <li>
+    <li> 
         <a href="recept.html">Receptsida</a> - En sida där jag delar med mig av mitt favoritrecept, "myntsoppa!"
         <br> 
         <hr>
     </li>
-    <li>
-        <a href="portfolio.html">Porfolio</a> - Lite info om mig själv och mina tidigare projekt.
-        <br>
+    <li> 
+        <a href="portfolio.html">Portfolio</a> - lite info om mig själv och mina tidigare projekt.
+        <br> 
         <hr>
     </li>
     <li>
