--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,14 @@
 <title>"Min personliga portfolio"</title>
 <body>
     <h1>Sixten Melkersson</h1>
+    <style>
+    h1{
+      color: purple;
+      font-size: 40px;
+    }
+    body{
+      background-color: violet;
+    </style>
     <h2>Om mig:</h2>
     <p>Jag har inte rikitigt någon erfarenhet eftersom att jag är 17 år gammal och är fortfarande i gymnasiet. Men jag lär mig snabbt och kan jobba hårt. Jag är bestämmd och har snabb beslutförmåga.</p>
     <span>Jag må vara ung men jag enligt mig är rätt mogen. Jag är beredd på att jobba hårt. </span>
