--- a/recept.html
+++ b/recept.html
@@ -7,6 +7,16 @@
 </head>
 <body>
   <h1>Myntsoppa! Ett traditionell Anderhoviskt recept</h1>
+  <style>
+    h1{
+      color: blue;
+      font-size: 35px;
+      background-color: green;
+    }
+    body{
+      background-color: red;
+    }
+  </style>
   <h2>Ingridienser:</h2>
   <ul>
     <li>Mynt, Kokande vatten, Kosher förhud</li>
@@ -15,7 +25,7 @@
   <ol>
     <li>Förbered 5 liter kokande vatten.</li>
     <li>Rör runt circa 60 mynt i kokande vatten tills de börjar bli bruna.</li>
-    <li>förbred soppa i djupskål och garnera med strimlad förhud.</li>
+    <li>förbred soppa i djupskål och garnera med strimlad hundralapp.</li>
   </ol>
   <p>Mängden mynt bestämmer hur djup smak av girighet du eftersöker.</p>
   <p><a href="https://www.pimbex.com/article/why-do-coins-have-ridges-or-reeded-edges/">Lär dig mer om Anderhovisk kultur här!</a></p>
