--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,12 @@
 <title>"Min personliga portfolio"</title>
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Min personliga portfolio</title>
+    <link rel="stylesheet" href="portofolio-stil.css">
+</head>
 <body>
     <h1>Sixten Melkersson</h1>
     <style>
@@ -8,6 +16,7 @@
     }
     body{
       background-color: violet;
+    }
     </style>
     <h2>Om mig:</h2>
     <p>Jag har inte rikitigt någon erfarenhet eftersom att jag är 17 år gammal och är fortfarande i gymnasiet. Men jag lär mig snabbt och kan jobba hårt. Jag är bestämmd och har snabb beslutförmåga.</p>
@@ -15,8 +24,8 @@
     <h2>mina project/ Mina största åtkomster:</h2>
     <ul>
     <strong>- Jag gillar att spela tvspel ARENA BREAKOUT!!!!
-        <p>- Jag är gillar att hänga med vänner och ta kristal methamphetamin</p>
-        <p> -Jag gillar även att rita och gloona</p>
+        <p>- Jag är gillar att hänga med vänner och pilla på neo </p>
+        <p> -Jag gillar även att rita och vara i naturen</p>
      </strong>
     <p>Jag är riktigt smart</p>
     <h2>Kontakta mig här:</h2>
@@ -27,3 +36,4 @@
     </ul>
 </body>
 <a href="index.html">Tillbaka till mina arbeten</a>
+</html>
