--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min personliga portfolio</title>
     <link rel="stylesheet" href="portofolio-stil.css">
-</head>
-<body>
-    <h1>Sixten Melkersson</h1>
+     <h1>Sixten Melkersson</h1>
     <style>
     h1{
       color: purple;
@@ -16,8 +14,11 @@
     }
     body{
       background-color: violet;
+      link src="portofolio-stil.css"
     }
     </style>
+</head>
+<body>
     <h2>Om mig:</h2>
     <p>Jag har inte rikitigt någon erfarenhet eftersom att jag är 17 år gammal och är fortfarande i gymnasiet. Men jag lär mig snabbt och kan jobba hårt. Jag är bestämmd och har snabb beslutförmåga.</p>
     <span>Jag må vara ung men jag enligt mig är rätt mogen. Jag är beredd på att jobba hårt. </span>
@@ -34,6 +35,6 @@
     <p>Snälla anlita mig jag behöver pengar!!!</p>
     <img src="hmm.jpeg" alt="">
     </ul>
+  <a href ="index.html">Tillbaka till mina arbeten</a>
 </body>
-<a href="index.html">Tillbaka till mina arbeten</a>
 </html>
